feat: aside responsive no design

--- a/frontend/src/components/Aside/Aside.module.css
+++ b/frontend/src/components/Aside/Aside.module.css
@@ -30,6 +30,12 @@
   display: none;
 }
 
+@media screen and (min-width: 577px) {
+  .show {
+    display: block;
+  }
+}
+
 @media screen and (max-width: 576px) {
   aside {
     display: none;
