--- a/frontend/src/components/Aside/Aside.module.css
+++ b/frontend/src/components/Aside/Aside.module.css
@@ -58,7 +58,8 @@
 
 @media screen and (min-width: 577px) {
   aside {
-    max-width: 30%;
+    /* max-width: 30%; */
+    grid-column: 1/4;
     height: 100vh;
     background-color: antiquewhite;
   }
