--- a/frontend/src/Layouts/MainLayout.module.css
+++ b/frontend/src/Layouts/MainLayout.module.css
@@ -1,8 +1,13 @@
 .layout-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  width: 100%;
 }
 
-.layout__container--main {
+.layout-container--main {
   grid-column: 4/-1;
+  margin-top: 1rem;
+}
+.layout-container--aside {
+  grid-column: 1/4;
 }
