--- a/frontend/src/components/Aside/Aside.module.css
+++ b/frontend/src/components/Aside/Aside.module.css
@@ -62,6 +62,8 @@
     grid-column: 1/4;
     height: 100vh;
     background-color: antiquewhite;
+    position: fixed;
+    width: calc(100vw / 12 * 2.8);
   }
 }
 
