--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -8,6 +8,7 @@
   display: flex;
   gap: 1rem;
 }
+
 .card-header__avatar {
   border-radius: 100%;
   width: 70px;
@@ -17,6 +18,11 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.card-header__user > p {
+  margin: 0;
+}
+
 .card-header__user--username {
   font-weight: 700;
   font-size: 1.2rem;
