--- a/frontend/src/components/Card/Card.module.css
+++ b/frontend/src/components/Card/Card.module.css
@@ -3,6 +3,12 @@
   padding: 1rem;
   border-radius: 10px;
   margin: 0.5rem;
+  transition: transform 100ms ease-in-out;
+}
+
+.card:hover {
+  cursor: pointer;
+  transform: translateY(-2px);
 }
 
 .card-header {
