--- a/frontend/src/Pages/Post/IndividualPost/IndividualPost.module.css
+++ b/frontend/src/Pages/Post/IndividualPost/IndividualPost.module.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   background-color: aliceblue;
   border-radius: 15px;
+  padding-bottom: 0.5rem;
 }
 
 .individual-post-container__img {
